Changed with Jim's comments.

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % abstract.tex - Ian Huston
-% $Id: abstract.tex,v 1.10 2009/08/17 13:57:16 ith Exp $
+% $Id: abstract.tex,v 1.11 2009/08/21 10:44:51 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.10 2009/08/17 13:57:16 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: abstract.tex,v 1.11 2009/08/21 10:44:51 ith Exp $}
 % 
 % 
 \chapter*{Abstract}
@@ -13,8 +13,8 @@
 \singlespacing
 Inflationary cosmology is the leading explanation of the very early universe. 
 Many different models of inflation have been constructed which fit current observational data.
-In this work theoretical and numerical methods for constraining the parameter space of these models
-are described.
+In this work theoretical and numerical methods for constraining the parameter space of a wide class
+of such models are described.
 
 First, string-theoretic models with large non-gaussian signatures are investigated.
 % First paper
@@ -55,15 +55,15 @@ non-gaussianity.
 % % observable to future experiments. 
 By analysing general non-canonical actions, a class of models is found which can
 evade the upper bound when the phase speed of perturbations is small. The multi-coincident brane
-scenario with a finite number of branes is one such model. An iterative technique is used to
-determine the action for this case.
-For models with a possibly observable gravitational wave spectrum the number of coincident branes is
-shown to take only small values. 
+scenario with a finite number of branes is one such model. 
+For models with a potentially observable gravitational wave spectrum the number of coincident branes
+is shown to take only small values. 
 
 % Third paper
 The second method of constraining inflationary models is the numerical calculation
 of second order perturbations for a general class of single field models.
-The Klein-Gordon equation at second order is numerically solved in closed form. 
+The Klein-Gordon equation at second order, written in terms
+of scalar field variations only, is numerically solved. 
 The slow-roll version of the second order source term is used and the method is
 shown to be extendable to the full equation.
 This procedure allows the evolution of second order
